# dj-dl

./: .gitignore  README.md  config.example.toml  pyproject.toml
src/dj_dl/: __init__.py  analyzer.py  cli.py  config.py  db.py  download.py  enhancer.py  logging_setup.py  lyrics.py  migrate.py  postprocess.py  stems.py  sync.py  tagger.py
src/dj_dl/sources/: __init__.py  base.py  deemixfix.py  doubledouble.py  lucida.py  onthespot.py  orpheusdl.py  slsk.py  spotdl.py  spotiflac.py  streamrip.py  ytdlp.py
tests/: test_cli.py  test_config.py  test_db.py  test_db_lyrics.py  test_download.py  test_integration.py  test_lyrics.py  test_postprocess.py  test_sources_spotdl.py  test_sources_ytdlp.py
