[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dj-dl"
version = "0.1.0"
description = "All-in-one DJ track downloader with multi-source fallback"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "spotipy>=2.20",
    "mutagen>=1.47",
    "musicbrainzngs>=0.7",
    "httpx>=0.27",
]

[project.optional-dependencies]
gui = ["PyQt6>=6.5"]
analysis = ["essentia>=2.1b6"]
stems = ["demucs>=4.0"]
dev = ["pytest>=8.0", "pytest-tmp-files>=0.0.2"]

[project.scripts]
dj-dl = "dj_dl.cli:main"
